--- a/Travel/index.html
+++ b/Travel/index.html
@@ -31,15 +31,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			</nav>
 		</header>
 
-
-
 		<!-- Banner -->
 		<section id="banner" class="major">
 			<div class="inner">
 
 
 				<div id="myModal" class="modal">
-					<div>	<a href="index.html" title="Close" class="close">X</a>
+					<div>	<a href="#myModal" title="Close" class="close">X</a>
 
 						<center>
 							<h2>Welcome</h2>
@@ -52,7 +50,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 								</div>
 							</form>
 							<ul class="actions">
-								<li><a href="index.html" class="button next scrolly">Get Started</a></li>
+								<li><a href="#myModal" class="button next scrolly">Get Started</a></li>
 							</ul>
 						</center>
 					</div>
