--- a/Travel/index.html
+++ b/Travel/index.html
@@ -1,110 +1,68 @@
 <!DOCTYPE HTML>
-<!--
-Forty by HTML5 UP
-html5up.net | @ajlkn
-Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 <head>
-	<title>Travel</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+  <title>Travel</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/main.css" />
 </head>
+
 <body>
 
+  <nav class="nav">
+    <ul>
+      <li><a class="active" href="#home">Travel Website</a></li>
+      <li style="float:right"><a href="signup.html" class="icon fa-users"> </a></li>
+      <li style="float:right"><a class="icon fa-search"> Search</a></li>
+    </ul>
+  </nav>
+  <center><h1> Select a Region You Would Like to Visit </h1></center>
+  <img src="/Users/adriennemomoh/Desktop/CS4640/Travel/images/world_map.png" width=100% height=100%></img>
 
+  <div id="Map" class="modal">
+    <div>	<a href="#Map" title="Close" class="close">X</a>
 
-	<!-- Wrapper -->
-	<div id="wrapper">
+      <center>
+        <h2>Welcome to Travel Website</h2>
+        <form method="post" action="#">
 
+          <input type="text" placeholder="Name Your Trip" /></h2>
+          <input href="#Map" type="submit" value="Start Your Journey">
+        </form>
 
-		<!-- Header -->
-		<header id="header" class="alt">
-			<a href="#myModal" class="logo"><strong>Travel Website</strong></a>
-			<nav>
-				<a class="icon fa-search"> Search</a>
-				<a class="icon fa-users"></a>
-			</nav>
-		</header>
+      </center>
+    </div>
+  </div>
 
-		<!-- Banner -->
-		<section id="banner" class="major">
-			<div class="inner">
-
-
-				<div id="myModal" class="modal">
-					<div>	<a href="#myModal" title="Close" class="close">X</a>
-
-						<center>
-							<h2>Welcome</h2>
-							<p> Select a Region you would like to visit </p>
-							<form method="post" action="#">
-								<div class="row uniform">
-									<div class="12u$">
-										<input type="text"  placeholder="Name Your Trip" />
-									</div>
-								</div>
-							</form>
-							<ul class="actions">
-								<li><a href="#myModal" class="button next scrolly">Get Started</a></li>
-							</ul>
-						</center>
-					</div>
-
-
-				</div>
-
-
-			</div>
-		</section>
-
-
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Travel</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
-
-	</div>
-
-	<!-- Scripts -->
+  <footer id="footer">
 
 
 
+    <p class="left">
 
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
+      Copyright © 2017
+    </p>
+    <p class="right">
 
-	<script type="text/javascript">
-	$(window).on('load',function(){
-		$('#myModal').modal('show');
-	});
-	</script>
+      Designed by xxxxxx
+    </p>
 
 
+    <center>
+      <a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a>
+      <a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
+      <a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a>
+      <a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a>
+      <a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a>
 
 
-
-
+      <ul class="copyright">
+        <li>&copy; Travel</li>
+      </ul>
+    </center>
+  </footer>
 
 </body>
 </html>
