Map should work now

--- a/Travel/index.html
+++ b/Travel/index.html
@@ -19,8 +19,7 @@
     </ul>
   </nav>
   <center><h1> Select a Region You Would Like to Visit </h1></center>
-  <img src="/Users/adriennemomoh/Desktop/CS4640/Travel/images/world_map.png" width=100% height=100%></img>
-
+  <img src="images/world_map.png" width=100% height=100%></img>
   <div id="Map" class="modal">
     <div>	<a href="#Map" title="Close" class="close">X</a>
 
