--- a/Travel/index.html
+++ b/Travel/index.html
@@ -6,11 +6,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body>
-
+  <!-- Header -->
   <nav class="nav">
     <ul>
       <li><a class="active" href="#home">Travel Website</a></li>
@@ -18,37 +19,32 @@
       <li style="float:right"><a class="icon fa-search"> Search</a></li>
     </ul>
   </nav>
+  
   <center><h1> Select a Region You Would Like to Visit </h1></center>
+
+  <!-- Map Image-->
   <img src="images/world_map.png" width=100% height=100%></img>
+
+  <!-- Modal -->
   <div id="Map" class="modal">
     <div>	<a href="#Map" title="Close" class="close">X</a>
 
       <center>
         <h2>Welcome to Travel Website</h2>
-        <form method="post" action="#">
+        <form method="POST" name="tripname" action="#Map" onsubmit="return formValidation();">
 
-          <input type="text" placeholder="Name Your Trip" /></h2>
+          <input type="text" name="trip" placeholder="Name Your Trip" /></h2>
           <input href="#Map" type="submit" value="Start Your Journey">
         </form>
-
       </center>
     </div>
   </div>
 
+  <!-- Footer  -->
   <footer id="footer">
 
-
-
-    <p class="left">
-
-      Copyright © 2017
-    </p>
-    <p class="right">
-
-      Designed by xxxxxx
-    </p>
-
-
+    <p class="left">Copyright © 2017</p>
+    <p class="right">Designed by xxxxxx</p>
     <center>
       <a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a>
       <a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
@@ -63,5 +59,16 @@
     </center>
   </footer>
 
+  <!-- Script -->
+  <!-- Form Validation -->
+  <script>
+  function formValidation() {
+    var x = document.forms["tripname"]["trip"].value;
+    if (x == "") {
+      alert("Name must be filled out");
+      return false;
+    }
+  }
+  </script>
 </body>
 </html>
