Added a map.html so that modal doesnt always pop up

--- a/Travel/signup.html
+++ b/Travel/signup.html
@@ -23,8 +23,8 @@ function setFocus()
   <!--  Header  -->
   <nav class="nav">
     <ul>
-      <li><a class="active" href="#home">Travel Website</a></li>
-      <li><a class="active" href="index.html">Back To Map</a></li>
+      <li><a class="active" href="index.html">Travel Website</a></li>
+      <li><a class="active" href="map.html">Back To Map</a></li>
 
       <li style="float:right"><a href="#" class="icon fa-user-circle"> Login</a></li>
     </ul>
