add discover page and styling

--- a/Travel/index.html
+++ b/Travel/index.html
@@ -35,7 +35,7 @@
   <center><h1> Select a Region You Would Like to Visit </h1></center>
 
   <!-- Map Image-->
-  <img src="images/world_map.png" width=100% height=100%></img>
+  <a href="discover.html"><img src="images/world_map.png" width=100% height=100%></img></a>
 
   <!-- Modal -->
   <div id="Map" class="modal">
