--- a/Travel/discover.html
+++ b/Travel/discover.html
@@ -39,22 +39,6 @@
       <div class="col-xs-2 filter-box">
         <h3 class="filter-text">Filter</h3>
         <hr>
-        <div>
-          <table>
-            <tr>
-              <th>Month</th>
-              <th>Savings</th>
-            </tr>
-            <tr>
-              <td>January</td>
-              <td>$100</td>
-            </tr>
-            <tr>
-              <td>February</td>
-              <td>$80</td>
-            </tr>
-          </table>
-        </div>
       </div>
       <div class="col-xs-9 card">
         <div class="container">
@@ -97,16 +81,28 @@
   <!-- Footer  -->
   <footer id="footer">
 
-    <p class="left">Copyright © 2017</p>
-    <p class="right">Designed by xxxxxx</p>
+    <p class="right">Designed by <br> Adrienne & Karley</p>
+    <div class="left">
+      <table>
+        <tr>
+          <th>Contact Us</th>
+        </tr>
+        <tr>
+          <td>Phone Number </td>
+          <td>555-555-5555</td>
+        </tr>
+        <tr>
+          <td>Address</td>
+          <td>100 Engineering Way</td>
+        </tr>
+      </table>
+    </div>
     <center>
       <a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a>
       <a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
       <a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a>
       <a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a>
       <a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a>
-
-
       <ul class="copyright">
         <li>&copy; Travel</li>
       </ul>
