Made a few edits to layout

--- a/Travel/discover.html
+++ b/Travel/discover.html
@@ -16,6 +16,8 @@
   <nav class="nav">
     <ul>
       <li><a class="active" href="index.html">Travel Website</a></li>
+      <li><a class="active" href="map.html">Back To Map</a></li>
+
       <li style="float:right"><a href="#" class="icon fa-user-circle"> Login</a></li>
       <li style="float:right"><a href="signup.html" class="icon fa-users"> Sign Up</a></li>
       <div class="search">
@@ -30,7 +32,7 @@
   <!-- Body -->
   <div class="test">
     <div class="section-buttons">
-      <div class="box"><span class="box-text">Where do you want to go?</span></div>
+      <div class="box"><span class="box-text" >Where do you want to go?</span></div>
       <div class="box"><span class="box-text">Where do you want to stay?</span></div>
       <div class="box"><span class="box-text">How do you want to get there?</span></div>
       <div class="box"><span class="box-text">What do you want to eat?</span></div>
