--- a/Travel/index.html
+++ b/Travel/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="assets/css/main.css" />
+
   <script>
   function setFocus()
   {
@@ -56,16 +57,28 @@
   <!-- Footer  -->
   <footer id="footer">
 
-    <p class="left">Copyright © 2017</p>
-    <p class="right">Designed by xxxxxx</p>
+    <p class="right">Designed by <br> Adrienne & Karley</p>
+    <div class="left">
+      <table>
+        <tr>
+          <th>Contact Us</th>
+        </tr>
+        <tr>
+          <td>Phone Number </td>
+          <td>555-555-5555</td>
+        </tr>
+        <tr>
+          <td>Address</td>
+          <td>100 Engineering Way</td>
+        </tr>
+      </table>
+    </div>
     <center>
       <a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a>
       <a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
       <a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a>
       <a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a>
       <a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a>
-
-
       <ul class="copyright">
         <li>&copy; Travel</li>
       </ul>
