--- a/Travel/map.html
+++ b/Travel/map.html
@@ -29,22 +29,35 @@
   <center><h1> Select a Region You Would Like to Visit </h1></center>
 
   <!-- Map Image-->
-  <img src="images/world_map.png" width=100% height=100%></img>
+  <a href="discover.html"><img src="images/world_map.png" width=100% height=100%></img></a>
+
 
 
   <!-- Footer  -->
   <footer id="footer">
 
-    <p class="left">Copyright © 2017</p>
-    <p class="right">Designed by xxxxxx</p>
+    <p class="right">Designed by <br> Adrienne & Karley</p>
+    <div class="left">
+      <table>
+        <tr>
+          <th>Contact Us</th>
+        </tr>
+        <tr>
+          <td>Phone Number </td>
+          <td>555-555-5555</td>
+        </tr>
+        <tr>
+          <td>Address</td>
+          <td>100 Engineering Way</td>
+        </tr>
+      </table>
+    </div>
     <center>
       <a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a>
       <a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
       <a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a>
       <a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a>
       <a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a>
-
-
       <ul class="copyright">
         <li>&copy; Travel</li>
       </ul>
