--- a/Travel/signup.html
+++ b/Travel/signup.html
@@ -63,13 +63,25 @@ function setFocus()
 
 </br></br>
 
-<!--  Footer -->
+<!-- Footer  -->
 <footer id="footer">
 
-  <p class="left">Copyright © 2017</p>
-  <p class="right">Designed by xxxxxx</p>
-
-
+  <p class="right">Designed by <br> Adrienne & Karley</p>
+  <div class="left">
+    <table>
+      <tr>
+        <th>Contact Us</th>
+      </tr>
+      <tr>
+        <td>Phone Number </td>
+        <td>555-555-5555</td>
+      </tr>
+      <tr>
+        <td>Address</td>
+        <td>100 Engineering Way</td>
+      </tr>
+    </table>
+  </div>
   <center>
     <a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a>
     <a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a>
