--- a/Travel/discover.html
+++ b/Travel/discover.html
@@ -30,6 +30,11 @@
   </nav>
 
   <!-- Body -->
+  <script>
+    function alertChosen() {
+      alert("You chose this destination!");
+    }
+  </script>
   <div class="test">
     <div class="section-buttons">
       <div class="box"><span class="box-text" >Where do you want to go?</span></div>
@@ -42,40 +47,34 @@
         <h3 class="filter-text">Filter</h3>
         <hr>
       </div>
-      <div class="col-xs-9 card">
+      <div class="col-xs-9 card" onclick="alertChosen()">
         <div class="container">
-          <h4><b>Destination</b></h4>
-          <p>Description</p>
+          <h4><b>Hawaii - United States</b></h4>
+          <p>Visit the volcanic islands, surf the great swells, and enjoy the local customs.</p>
         </div>
       </div>
-      <div class="col-xs-9 card">
+      <div class="col-xs-9 card" onclick="alertChosen()">
         <div class="container">
-          <h4><b>Destination</b></h4>
-          <p>Description</p>
+          <h4><b>The Grand Canyon - Arizona, United States </b></h4>
+          <p>Raft the spectacular river, hike along the South Rim, and enjoy this natural wonder.</p>
         </div>
       </div>
-      <div class="col-xs-9 card">
+      <div class="col-xs-9 card" onclick="alertChosen()">
         <div class="container">
-          <h4><b>Destination</b></h4>
-          <p>Description</p>
+          <h4><b>Machu Pichu, Peru</b></h4>
+          <p>Visit the miraculous ruins of the Inca Empire.</p>
         </div>
       </div>
-      <div class="col-xs-9 card">
+      <div class="col-xs-9 card" onclick="alertChosen()">
         <div class="container">
-          <h4><b>Destination</b></h4>
-          <p>Description</p>
+          <h4><b>Pyramids of Giza, Giza, Egypt</b></h4>
+          <p>One of the Seven Wonders of the World, visit these monuments to the ancient world. </p>
         </div>
       </div>
-      <div class="col-xs-9 card">
+      <div class="col-xs-9 card" onclick="alertChosen()">
         <div class="container">
-          <h4><b>Destination</b></h4>
-          <p>Description</p>
-        </div>
-      </div>
-      <div class="col-xs-9 card">
-        <div class="container">
-          <h4><b>Destination</b></h4>
-          <p>Description</p>
+          <h4><b>The Eiffel Tower, Paris, France</b></h4>
+          <p>See the most famous structure in Paris as it twinkles at night.</p>
         </div>
       </div>
   </div>
