added php file for signup

--- a/Travel/signup.html
+++ b/Travel/signup.html
@@ -35,7 +35,7 @@ function setFocus()
     <center><h1> Sign Up </h1></center>
     <div class="container">
     <div class="signup">
-      <form method="POST" name="signup" action="#">
+      <form method="POST" name="signup" action="signup.php">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" placeholder="Enter Username" required>
 
